# repo-lens

./: .editorconfig  .gitignore  BLACK_BOX_REPORT.md  Cargo.toml  Makefile  README.md  rustfmt.toml  system_map.json
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/rl_api/: Cargo.toml
crates/rl_api/src/: bounds.rs  error.rs  event.rs  lib.rs  paging.rs  request.rs  response.rs  version.rs
crates/rl_bench/: Cargo.toml
crates/rl_bench/baselines/: local.json
crates/rl_bench/src/: lib.rs  main.rs  regression.rs
crates/rl_bench/src/benches/: diff_summary.rs  log_page.rs  mod.rs  status.rs
crates/rl_bench/src/datasets/: manifest.toml  mod.rs
crates/rl_bench/src/oracle/: compare.rs  git_cli.rs  mod.rs  normalize.rs
crates/rl_bench/src/scenarios/: mod.rs
crates/rl_cli/: Cargo.toml
crates/rl_cli/src/: main.rs
crates/rl_core/: Cargo.toml
crates/rl_core/src/: lib.rs  telemetry.rs
crates/rl_fixtures/: Cargo.toml
crates/rl_fixtures/src/: lib.rs  synth_repo.rs
crates/rl_git/: Cargo.toml
crates/rl_git/src/: backend.rs  lib.rs
crates/rl_index/: Cargo.toml
crates/rl_index/src/: lib.rs
crates/rl_ipc/: Cargo.toml
crates/rl_ipc/src/: lib.rs
docs/: ORIENTATION.md
docs/contracts/: README.md  api-shapes.md  performance-expectations.md  versioning-policy.md
docs/decisions/: 001-git-backend-abstraction.md  002-api-contract-first.md  003-incremental-caching.md  README.md
