[package]
name = "rl_api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed request/response DTOs for the repo-lens API contract"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
