[package]
name = "rl_index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Bounded caches and incremental indices for repo-lens"

[dependencies]
rl_git = { path = "../rl_git" }
serde.workspace = true
thiserror.workspace = true
